fixed z-index on dates

--- a/src/scss/latest-articles.scss
+++ b/src/scss/latest-articles.scss
@@ -17,7 +17,7 @@
       font-size: 14px;
       background: rgba($dark,.8);
       color: $light;
-      z-index: 5;
+      z-index: 2;
     }
 
     > p {
